# asp-adli-python

./: .gitignore  README.md  abstraction_sample_program.py  adli.py  adli_metadata.json  adli_system.py  processFile.py  pyproject.toml  sample_system_defintion_file.json  system_defintion_file.json  test.py
docs/: overview.md
injector/: CheckDisabledVariable.py  CollectVariableInfo.py  CollectVariableNames.py  CollectVariables.py  FindLocalImports.py  InjectClassUid.py  LoadDesignConfiguration.py  LogInjector.py  LogInjectorDesign.py  NodeExtractor.py  ProgramProcessor.py  SST.py  UpdateVariableInfo.py  adli_config.json  helper.py  injectedFunctions.py  processFile.py
injector/CallCollectors/: CallCollector.py
injector/CollectVarDependencies/: CollectVarDependencies.py  CollectVarDependencies_old.py
injector/CommentCollectors/: getDisabledVariable.py  getMetadata.py
injector/Injectors/: InlineInjector.py
injector/LoggerInstance/: AdliLogger.py  LoggerInstance.py  getLoggerInstance.py
injector/VarDependencyCollector/: VarDependencyCollector.py
injector/VariableCollectors/: BaseVariableCollector.py  CollectAssignVarInfo.py  CollectCallVariables.py  CollectFunctionArgInfo.py  CollectVariableDefault.py
injector/VariableInjectors/: ValueKeyInjector.py
sample/: LibraryManager.drawio  abstraction_sample_program.py  library_manager.py  library_manager_abs_map.json  library_manager_sdg.json
sample/distributed-image-processor/: readme
sample/distributed-sorting-system/: docker-compose.yml  readme
sample/library_manager_v1/: library_manager.py  readme  (+3 more)
(+33 files in other folders)
